--- a/po/id.po
+++ b/po/id.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-02 00:07-0400\n"
+"POT-Creation-Date: 2011-05-02 00:28-0400\n"
 "PO-Revision-Date: 2010-01-14 15:45SE Asi\n"
 "Last-Translator: Tumagonx <mr_tiar@gmail.com>\n"
 "Language-Team: Indonesian <id@li.org>\n"
@@ -1629,7 +1629,7 @@ msgstr ""
 msgid "New"
 msgstr "Baru"
 
-#: ../gui/filehandling.py:60 ../gui/filehandling.py:290
+#: ../gui/filehandling.py:60 ../gui/filehandling.py:294
 msgid "Open..."
 msgstr "Buka..."
 
@@ -1733,39 +1733,28 @@ msgid "Really continue?"
 msgstr "Benar akan berhenti?"
 
 #: ../gui/filehandling.py:191
-#, python-format
-msgid "%d minute"
-msgid_plural "%d minutes"
-msgstr[0] "%d menit"
-msgstr[1] "%d menit"
+#, fuzzy, python-format
+msgid "This will discard %d minute of unsaved painting."
+msgid_plural "This will discard %d minutes of unsaved painting."
+msgstr[0] "Akan mengabaikan %d menit lukisan yg tak tersimpan."
+msgstr[1] "Akan mengabaikan %d menit lukisan yg tak tersimpan."
 
-#: ../gui/filehandling.py:194
-#, python-format
-msgid "%d second"
-msgid_plural "%d seconds"
-msgstr[0] "%d detik"
-msgstr[1] "%d detik"
+#: ../gui/filehandling.py:196
+#, fuzzy, python-format
+msgid "This will discard %d second of unsaved painting."
+msgid_plural "This will discard %d seconds of unsaved painting."
+msgstr[0] "Akan mengabaikan %d detik lukisan yg tak tersimpan."
+msgstr[1] "Akan mengabaikan %d detik lukisan yg tak tersimpan."
 
-#: ../gui/filehandling.py:200
+#: ../gui/filehandling.py:204
 msgid "_Save as Scrap"
 msgstr "_Simpan sebagai Scrap"
 
-#: ../gui/filehandling.py:206
-#, python-format
-msgid ""
-"<b>%s</b>\n"
-"\n"
-"This will discard %s of unsaved painting."
-msgstr ""
-"<b>%s</b>\n"
-"\n"
-"Akan mengabaikan %s lukisan yg tak tersimpan."
-
-#: ../gui/filehandling.py:248
+#: ../gui/filehandling.py:252
 msgid "Did not save, the canvas is empty."
 msgstr "Tidak menyimpan, kanvas kosong"
 
-#: ../gui/filehandling.py:495
+#: ../gui/filehandling.py:499
 #, python-format
 msgid "There are no scrap files named \"%s\" yet."
 msgstr "Tiada berkas scrap dengan nama \"%s\".saat ini"
