--- a/po/pl.po
+++ b/po/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MyPaint GIT\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-02 00:07-0400\n"
+"POT-Creation-Date: 2011-05-02 00:28-0400\n"
 "PO-Revision-Date:\n"
 "Last-Translator: Lukasz Lubojanski <lukasz@lubojanski.info>\n"
 "Language-Team: Lukasz Lubojanski <lukasz@lugojanski.info>\n"
@@ -1630,7 +1630,7 @@ msgstr ""
 msgid "New"
 msgstr "Nowy obraz"
 
-#: ../gui/filehandling.py:60 ../gui/filehandling.py:290
+#: ../gui/filehandling.py:60 ../gui/filehandling.py:294
 msgid "Open..."
 msgstr "Otwórz..."
 
@@ -1733,39 +1733,28 @@ msgid "Really continue?"
 msgstr "Czy na pewno chcesz zamknąć program ?"
 
 #: ../gui/filehandling.py:191
-#, python-format
-msgid "%d minute"
-msgid_plural "%d minutes"
-msgstr[0] "%d minut"
-msgstr[1] "%d minuty"
+#, fuzzy, python-format
+msgid "This will discard %d minute of unsaved painting."
+msgid_plural "This will discard %d minutes of unsaved painting."
+msgstr[0] "Zmiany w pliku z ostatnich %d minut zostaną utracone."
+msgstr[1] "Zmiany w pliku z ostatnich %d minuty zostaną utracone."
 
-#: ../gui/filehandling.py:194
-#, python-format
-msgid "%d second"
-msgid_plural "%d seconds"
-msgstr[0] "%d sekund"
-msgstr[1] "%d sekundy"
+#: ../gui/filehandling.py:196
+#, fuzzy, python-format
+msgid "This will discard %d second of unsaved painting."
+msgid_plural "This will discard %d seconds of unsaved painting."
+msgstr[0] "Zmiany w pliku z ostatnich %d sekund zostaną utracone."
+msgstr[1] "Zmiany w pliku z ostatnich %d sekundy zostaną utracone."
 
-#: ../gui/filehandling.py:200
+#: ../gui/filehandling.py:204
 msgid "_Save as Scrap"
 msgstr "_Zapamiętaj jako kartkę"
 
-#: ../gui/filehandling.py:206
-#, python-format
-msgid ""
-"<b>%s</b>\n"
-"\n"
-"This will discard %s of unsaved painting."
-msgstr ""
-"<b>%s</b>\n"
-"\n"
-"Zmiany w pliku z ostatnich %s zostaną utracone."
-
-#: ../gui/filehandling.py:248
+#: ../gui/filehandling.py:252
 msgid "Did not save, the canvas is empty."
 msgstr "Plik nie zostanie zapisany ponieważ płótno jest czyste."
 
-#: ../gui/filehandling.py:495
+#: ../gui/filehandling.py:499
 #, python-format
 msgid "There are no scrap files named \"%s\" yet."
 msgstr "Nie znaleziono pliku kartki o nazwie \"%s\"."
