--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.9.0 -git\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-02 00:07-0400\n"
+"POT-Creation-Date: 2011-05-02 00:28-0400\n"
 "PO-Revision-Date: 2010-10-14 16:49+0900\n"
 "Last-Translator: Geuntak Jeong <beroberos@gmail.com>\n"
 "Language-Team: korea <beroberos@gmail.com>\n"
@@ -1571,7 +1571,7 @@ msgstr ""
 msgid "New"
 msgstr "새로운 캔버스"
 
-#: ../gui/filehandling.py:60 ../gui/filehandling.py:290
+#: ../gui/filehandling.py:60 ../gui/filehandling.py:294
 msgid "Open..."
 msgstr "열기..."
 
@@ -1671,39 +1671,28 @@ msgid "Really continue?"
 msgstr "정말 계속하시겠습니까?"
 
 #: ../gui/filehandling.py:191
-#, python-format
-msgid "%d minute"
-msgid_plural "%d minutes"
-msgstr[0] "%d 분"
-msgstr[1] "%d 여분"
+#, fuzzy, python-format
+msgid "This will discard %d minute of unsaved painting."
+msgid_plural "This will discard %d minutes of unsaved painting."
+msgstr[0] "저장하지 않으면 %d 분의 작업 내용을 잃어 버리게 됩니다."
+msgstr[1] "저장하지 않으면 %d 여분의 작업 내용을 잃어 버리게 됩니다."
 
-#: ../gui/filehandling.py:194
-#, python-format
-msgid "%d second"
-msgid_plural "%d seconds"
-msgstr[0] "%d 초"
-msgstr[1] "%d 여초"
+#: ../gui/filehandling.py:196
+#, fuzzy, python-format
+msgid "This will discard %d second of unsaved painting."
+msgid_plural "This will discard %d seconds of unsaved painting."
+msgstr[0] "저장하지 않으면 %d 초의 작업 내용을 잃어 버리게 됩니다."
+msgstr[1] "저장하지 않으면 %d 여초의 작업 내용을 잃어 버리게 됩니다."
 
-#: ../gui/filehandling.py:200
+#: ../gui/filehandling.py:204
 msgid "_Save as Scrap"
 msgstr "스크렙하기(_S)"
 
-#: ../gui/filehandling.py:206
-#, python-format
-msgid ""
-"<b>%s</b>\n"
-"\n"
-"This will discard %s of unsaved painting."
-msgstr ""
-"<b>%s</b>\n"
-"\n"
-"저장하지 않으면 %s의 작업 내용을 잃어 버리게 됩니다."
-
-#: ../gui/filehandling.py:248
+#: ../gui/filehandling.py:252
 msgid "Did not save, the canvas is empty."
 msgstr "캔버스가 비어있어 저장 할 수 없습니다."
 
-#: ../gui/filehandling.py:495
+#: ../gui/filehandling.py:499
 #, python-format
 msgid "There are no scrap files named \"%s\" yet."
 msgstr "스크랩 파일중에 이미 \"%s\"가 있습니다."
