--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.7.1-git\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-05-02 00:07-0400\n"
+"POT-Creation-Date: 2011-05-02 00:28-0400\n"
 "PO-Revision-Date: 2010-01-20 01:09+0100\n"
 "Last-Translator: Popolon <popolon@popolon.org>\n"
 "Language-Team: Simplified Chinese <zh@li.org>\n"
@@ -1449,7 +1449,7 @@ msgstr ""
 msgid "New"
 msgstr "新建"
 
-#: ../gui/filehandling.py:60 ../gui/filehandling.py:290
+#: ../gui/filehandling.py:60 ../gui/filehandling.py:294
 msgid "Open..."
 msgstr "打开..."
 
@@ -1554,35 +1554,27 @@ msgstr "真的要退出吗？"
 
 #: ../gui/filehandling.py:191
 #, python-format
-msgid "%d minute"
-msgid_plural "%d minutes"
-msgstr[0] "%d 分钟"
-msgstr[1] "%d 分钟"
+msgid "This will discard %d minute of unsaved painting."
+msgid_plural "This will discard %d minutes of unsaved painting."
+msgstr[0] "This will discard %d 分钟 of unsaved painting."
+msgstr[1] "This will discard %d 分钟 of unsaved painting."
 
-#: ../gui/filehandling.py:194
+#: ../gui/filehandling.py:196
 #, python-format
-msgid "%d second"
-msgid_plural "%d seconds"
-msgstr[0] "%d 秒钟"
-msgstr[1] "%d 秒钟"
+msgid "This will discard %d second of unsaved painting."
+msgid_plural "This will discard %d seconds of unsaved painting."
+msgstr[0] "This will discard %d 秒钟 of unsaved painting."
+msgstr[1] "This will discard %d 秒钟 of unsaved painting."
 
-#: ../gui/filehandling.py:200
+#: ../gui/filehandling.py:204
 msgid "_Save as Scrap"
 msgstr "保存为速写"
 
-#: ../gui/filehandling.py:206
-#, python-format
-msgid ""
-"<b>%s</b>\n"
-"\n"
-"This will discard %s of unsaved painting."
-msgstr ""
-
-#: ../gui/filehandling.py:248
+#: ../gui/filehandling.py:252
 msgid "Did not save, the canvas is empty."
 msgstr "没保存，无画布"
 
-#: ../gui/filehandling.py:495
+#: ../gui/filehandling.py:499
 #, python-format
 msgid "There are no scrap files named \"%s\" yet."
 msgstr "再没有 速写文件名为《%s》。"
